--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "ng-x-rocket",
   "version": "1.0.0",
   "private": true,
-    "scripts": {
+  "scripts": {
     "ng": "ng",
     "build": "npm run write:env -s && ng build",
-    "start": "npm run write:env -s && ng serve --proxy-config proxy.conf.js",
+    "start": "npm run write:env -s && ng serve --proxy-config proxy.conf.js --open",
     "serve:sw": "npm run build -s && npx http-server ./dist -p 4200",
     "lint": "ng lint && stylelint \"src/**/*.scss\"",
     "test": "npm run write:env -s && ng test",
