--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@ngx-translate/core": "^14.0.0",
     "@popperjs/core": "^2.11.0",
-    "bootstrap": "^5.2.0",
+    "angular-datatables": "^14.0.2",
+    "bootstrap": "^5.2.1",
+    "datatables.net": "^1.11.3",
+    "datatables.net-dt": "^1.11.3",
+    "jquery": "^3.6.3",
     "rxjs": "^7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -53,7 +57,9 @@
     "@biesbjerg/ngx-translate-extract-marker": "^1.0.0",
     "@ngneat/until-destroy": "^9.0.0",
     "@ngx-rocket/scripts": "^5.2.3",
+    "@types/datatables.net": "^1.10.24",
     "@types/jest": "^28.1.8",
+    "@types/jquery": "^3.5.16",
     "@types/node": "^14.18.26",
     "@typescript-eslint/eslint-plugin": "~5.34.0",
     "@typescript-eslint/parser": "~5.34.0",
