--- a/angular.json
+++ b/angular.json
@@ -33,10 +33,11 @@
               "src/manifest.webmanifest",
               "src/assets"
             ],
-            "styles": ["src/main.scss", "node_modules/datatables.net-dt/css/jquery.dataTables.css"],
+            "styles": ["src/main.scss", "node_modules/datatables.net-bs5/css/dataTables.bootstrap5.min.css"],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/datatables.net/js/jquery.dataTables.min.js"
+              "node_modules/datatables.net/js/jquery.dataTables.min.js",
+              "node_modules/datatables.net-bs5/js/dataTables.bootstrap5.min.js"
             ]
           },
           "configurations": {
