--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "angular-datatables": "^14.0.2",
     "bootstrap": "^5.2.1",
     "datatables.net": "^1.11.3",
+    "datatables.net-bs5": "^1.13.1",
     "datatables.net-dt": "^1.11.3",
     "jquery": "^3.6.3",
     "rxjs": "^7.5.0",
